# first-repo

./: README.md  another_file.txt  pyproject.toml
feature/: feat-file.txt  one-more-file.txt
folder/: fruits.txt  list.txt
