[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | .venv
  | venv
  | .direnv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
source = ["devops_plm_gcp_infra"]
branch = true
parallel = true
context = "${CONTEXT}"

[tool.coverage.report]
precision = 2
omit = ["./tests/*", "./examples/*", "./setup.py"]
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "raise NotImplemented",
  "if TYPE_CHECKING:",
  "@overload",
]

[tool.poetry]
name = "test-test-test"
version = "1.5.0"
description = ""
authors = ["andaritri"]
maintainers = ["andaritri"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andaritri/test-test-test.git"
homepage = "https://github.com/andaritri/test-test-test"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

packages = [
  { include = "test-test-test" },
  { include = "test-test-test/py.typed" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/andaritri/test-test-test/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pulumi = ">=3.12.0,<4.0.0"
pulumi-google-native = ">=0.7.0,<1.0.0"
pulumi-gcp = ">=5.0.0,<7.0.0"
pulumi-random = ">=4.3.1,<5.0.0"
pulumi-mongodbatlas = ">=3.1.1"
pydantic = ">=1.8.2,<2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
coverage = "^5.5"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.a
